fix add missing default avatar and remove extra padding at bottm in account-info

--- a/client/src/app/core/components/account-info/account-info.component.scss
+++ b/client/src/app/core/components/account-info/account-info.component.scss
@@ -29,10 +29,15 @@ section.upload-picture {
 
         .profile-avatar {
           margin-right: 38px;
+          height: 92px;
+          width: 92px;
+          border-radius: 46px;
+          background: #E9F6FD url('/assets/ic_profile_avatar.svg') no-repeat center;
+          background-size: 45%;
 
           img {
-            height: 92px;
-            width: 92px;
+            width: 100%;
+            height: 100%;  
             border-radius: 50%;
           }
         }
@@ -86,7 +91,7 @@ section.upload-picture {
     }
 
     .upload-picture-body {
-      padding: 0px 68px 170px 68px;
+      padding: 0px 68px 50px 68px;
 
       h2.section-title {
         margin-bottom: 10px;
